--- a/templates/documents/document_detail.html.twig
+++ b/templates/documents/document_detail.html.twig
@@ -37,12 +37,14 @@
                 <h3 class="text-xl font-bold mb-4">{{ documents.titre }}</h3>
                 <p class="mb-4">Le document a été créé le {{ documents.date_doc|date('d/m/Y') }}</p>
                 <p class="mb-8">Le chemin du document : {{ documents.link }}</p>
-                <a href="controleur.php?page=documents&action=update&id={{documents.idt_doc}}"
-                    class=" mr-2 px-4 py-2 text-green-600 rounded hover:bg-green-600 hover:text-white border border-green-600 transition duration-200 cursor-pointer">Modifier
-                    le rapport</a>
-                <a href="controleur.php?page=documents&action=delete&id={{documents.idt_doc}}"
-                    class=" mr-2 px-4 py-2 text-red-600 rounded hover:bg-red-600 border hover:text-white border-red-600 transition duration-200 cursor-pointer">Supprimer
-                    le rapport</a>
+                {% if session.username is defined %}
+                    <a href="controleur.php?page=documents&action=update&id={{documents.idt_doc}}"
+                        class=" mr-2 px-4 py-2 text-green-600 rounded hover:bg-green-600 hover:text-white border border-green-600 transition duration-200 cursor-pointer">Modifier
+                        le rapport</a>
+                    <a href="controleur.php?page=documents&action=delete&id={{documents.idt_doc}}"
+                        class=" mr-2 px-4 py-2 text-red-600 rounded hover:bg-red-600 border hover:text-white border-red-600 transition duration-200 cursor-pointer">Supprimer
+                        le rapport</a>
+                {% endif %}
             </div>
 
         </div>
