--- a/templates/documents/update.html.twig
+++ b/templates/documents/update.html.twig
@@ -1,31 +1,95 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Mise à jour du rapport</h1>
+<div class="p-4 flex justify-between items-center">
+    <div class="flex justify-center items-center">
+        <svg width="27" height="27" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M31.25 14.1111V32.2778H4V14.1111L17.625 2L31.25 14.1111Z" stroke="#4B515D" stroke-width="2.14697" stroke-linejoin="round"/>
+            <path d="M4 17.139H31.25M9.29861 9.56958V32.2779M25.9514 9.56958V32.2779M14.5972 23.1946H20.6528V32.2779H14.5972V23.1946Z" stroke="#4B515D" stroke-width="2.14697" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <h1 class="text-2xl font-bold mt-1 ml-2">Modification d'un rapport</h1>
+    </div>
 
-    <form action="controleur.php?page=documents&action=update" method="post">
-        <input type="hidden" name="id" value="{{ document.idt_doc }}">
+        <div class="flex justify-between items-center">
+            {% if session.username is defined %}
+            <div class="mr-2">
+                <p>{{session.username}}</p>
+                <div class="flex flex-row-reverse">
+                    {% if session.role_id == 1 %}
+                        <p class="text-zinc-600 text-xs font-light">Admin</p>
+                    {% else %}
+                        <p>Gestionnaire</p>
+                    {% endif %}
+                </div>
+            </div>
+            <img src="img/pfp.png" alt="" class="w-12 h-12 rounded-full">
+            {% endif %}
+        </div>
+</div>
+<main class="mt-2 w-full h-5/6 flex justify-center items-center">
 
-        <label for="titre">Titre du document :</label>
-        <input type="text" id="titre" name="titre" value="{{ document.titre }}">
+    <section class=" flex  p-8 border-solid border border-gray-200 bg-neutral-50 rounded-md shadow-lg">
+    
+        <form action="controleur.php?page=documents&action=update" method="post" class="flex flex-row justify-between">
+            <input type="hidden" name="id" value="{{ document.idt_doc }}">
 
-        <label for="communeSearch">Recherchez une commune :</label>
-        <input type="text" id="communeSearch">
-
-        <button type="button" id="addCommune">Ajouter la commune</button>
-
-        <h2>Communes sélectionnées</h2>
-        <ul id="selectedCommunes">
-            {% for commune in communes %}
-                <li data-id="{{ commune.idt_asr }}">
-                    {{ commune.nom }}
-                    <button type="button" class="deleteCommune">Supprimer</button>
-                </li>
-            {% endfor %}
-        </ul>
-
-        <input type="submit" value="Mettre à jour le document">
-    </form>
+            <div>
+                <div class="flex flex-col mr-4">
+                    <label for="titre" class="text-base font-semibold mb-2">Titre du document :</label>
+                    <input type="text" id="titre" name="titre" value="{{ document.titre }}" class="p-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-300 transition duration-200">
+                </div>
+        
+            </div>
+            
+            
+            <div class="h-full flex  flex-col justify-between items-end">
+                <div class=" flex flex-row">
+                    <div class="flex flex-col  mr-8">
+                        <label for="communeSearch" class="text-base font-semibold mb-2">Ajouter une commune :</label>
+                        <div class="flex">
+                            <input type="text" id="communeSearch" class="p-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-300 transition duration-200">
+                            <button type="button" id="addCommune" class=" ml-2 p-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-600 transition duration-200 cursor-pointer">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z" fill="blue"/>
+                                    </svg>
+                            </button>
+                        </div>
+                    </div>
+            
+                    <div>
+                        <h2 class="text-base font-semibold mb-2 ">Communes sélectionnées :</h2>
+                        <ul id="selectedCommunes">
+                            {% for commune in communes %}
+                                <li data-id="{{ commune.idt_asr }}" class="mr-4 mb-4 flex items-center">
+                                    {{ commune.nom }}
+                                    <button type="button" class="deleteCommune ml-4 p-1 text-red-600 rounded hover:bg-red-50 border border-red-600 transition duration-200 cursor-pointer">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_177_1489)">
+                                            <path d="M1.45459 4.18213H14.5455" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M3.09094 4.18213H12.9091V14.0003C12.9091 14.2896 12.7941 14.5671 12.5896 14.7717C12.3851 14.9762 12.1075 15.0912 11.8182 15.0912H4.18185C3.89252 15.0912 3.61505 14.9762 3.41046 14.7717C3.20588 14.5671 3.09094 14.2896 3.09094 14.0003V4.18213Z" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M5.27283 4.18191V3.63645C5.27283 2.91314 5.56016 2.21944 6.07162 1.70798C6.58309 1.19652 7.27678 0.90918 8.0001 0.90918C8.72342 0.90918 9.41711 1.19652 9.92858 1.70798C10.44 2.21944 10.7274 2.91314 10.7274 3.63645V4.18191" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M6.36365 7.45605V11.8214" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M9.63635 7.45605V11.8214" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                                            </g>
+                                            <defs>
+                                            <clipPath id="clip0_177_1489">
+                                            <rect width="15.2727" height="15.2727" fill="white" transform="translate(0.363647 0.36377)"/>
+                                            </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </button>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                    
+                <input type="submit" value="Mettre à jour le document" class="inline-block  px-4 py-2 text-green-600 rounded hover:bg-green-50 border border-green-600 transition duration-200 cursor-pointer">
+            </div>
+    
+        </form>
+    </section>
+</main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
@@ -49,10 +113,25 @@
     
             var li = document.createElement('li');
             li.textContent = communeName;
+            li.className = "mr-4 mb-4 flex items-center" ;
             li.dataset.id = communeId;
     
             var deleteButton = document.createElement('button');
-            deleteButton.textContent = 'Supprimer';
+            deleteButton.innerHTML = `<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_177_1489)">
+                <path d="M1.45459 4.18213H14.5455" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M3.09094 4.18213H12.9091V14.0003C12.9091 14.2896 12.7941 14.5671 12.5896 14.7717C12.3851 14.9762 12.1075 15.0912 11.8182 15.0912H4.18185C3.89252 15.0912 3.61505 14.9762 3.41046 14.7717C3.20588 14.5671 3.09094 14.2896 3.09094 14.0003V4.18213Z" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M5.27283 4.18191V3.63645C5.27283 2.91314 5.56016 2.21944 6.07162 1.70798C6.58309 1.19652 7.27678 0.90918 8.0001 0.90918C8.72342 0.90918 9.41711 1.19652 9.92858 1.70798C10.44 2.21944 10.7274 2.91314 10.7274 3.63645V4.18191" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M6.36365 7.45605V11.8214" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M9.63635 7.45605V11.8214" stroke="#EF4565" stroke-linecap="round" stroke-linejoin="round"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_177_1489">
+                <rect width="15.2727" height="15.2727" fill="white" transform="translate(0.363647 0.36377)"/>
+                </clipPath>
+                </defs>
+            </svg>`;
+            deleteButton.className = "ml-4 p-1 text-red-600 rounded hover:bg-red-50 border border-red-600 transition duration-200 cursor-pointer";
             deleteButton.classList.add('deleteCommune');
             deleteButton.addEventListener('click', function() {
                 li.remove();
