--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -49,7 +49,7 @@
                   <path
                      d="m17.418 3.623-.018-.008a6.713 6.713 0 0 0-2.4-.569V2h1a1 1 0 1 0 0-2h-2a1 1 0 0 0-1 1v2H9.89A6.977 6.977 0 0 1 12 8v5h-2V8A5 5 0 1 0 0 8v6a1 1 0 0 0 1 1h8v4a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-4h6a1 1 0 0 0 1-1V8a5 5 0 0 0-2.582-4.377ZM6 12H4a1 1 0 0 1 0-2h2a1 1 0 0 1 0 2Z" />
                </svg>
-               <span class="flex-1 ms-3 whitespace-nowrap">Liste communes</span>
+               <span class="flex-1 ms-3 whitespace-nowrap">Communes</span>
             </a>
          </li>
          <li>
@@ -61,7 +61,7 @@
                   <path
                      d="M16 14V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v15a3 3 0 0 0 3 3h12a1 1 0 0 0 0-2h-1v-2a2 2 0 0 0 2-2ZM4 2h2v12H4V2Zm8 16H3a1 1 0 0 1 0-2h9v2Z" />
                </svg>
-               <span class="flex-1 ms-3 whitespace-nowrap">Liste rapports</span>
+               <span class="flex-1 ms-3 whitespace-nowrap">Rapports</span>
             </a>
          </li>
       </ul>
@@ -94,6 +94,21 @@
                         d="M8.961 16a.93.93 0 0 0 .189-.019l3.4-.679a.961.961 0 0 0 .49-.263l6.118-6.117a2.884 2.884 0 0 0-4.079-4.078l-6.117 6.117a.96.96 0 0 0-.263.491l-.679 3.4A.961.961 0 0 0 8.961 16Zm7.477-9.8a.958.958 0 0 1 .68-.281.961.961 0 0 1 .682 1.644l-.315.315-1.36-1.36.313-.318Zm-5.911 5.911 4.236-4.236 1.359 1.359-4.236 4.237-1.7.339.341-1.699Z" />
                   </svg>
                   <span class="flex-1 ms-3 whitespace-nowrap">Gerer les utilisateurs</span>
+               </a>
+            </li>
+            <li>
+               <a href="controleur.php?page=categories&action=read"
+                  class="flex items-center p-2 py-4  text-zinc-600 rounded-lg hover:bg-gray-100 dark:hover:bg-sky-100 group font-normal transition duration-300">
+                  <svg
+                     class="flex-shrink-0 w-5 h-5 text-zinc-600 transition duration-75 text-neutral-900 group-hover:text-neutral-900 dark:group-hover:text-zinc-600"
+                     aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                     <path d="M5 5V.13a2.96 2.96 0 0 0-1.293.749L.879 3.707A2.96 2.96 0 0 0 .13 5H5Z" />
+                     <path
+                        d="M6.737 11.061a2.961 2.961 0 0 1 .81-1.515l6.117-6.116A4.839 4.839 0 0 1 16 2.141V2a1.97 1.97 0 0 0-1.933-2H7v5a2 2 0 0 1-2 2H0v11a1.969 1.969 0 0 0 1.933 2h12.134A1.97 1.97 0 0 0 16 18v-3.093l-1.546 1.546c-.413.413-.94.695-1.513.81l-3.4.679a2.947 2.947 0 0 1-1.85-.227 2.96 2.96 0 0 1-1.635-3.257l.681-3.397Z" />
+                     <path
+                        d="M8.961 16a.93.93 0 0 0 .189-.019l3.4-.679a.961.961 0 0 0 .49-.263l6.118-6.117a2.884 2.884 0 0 0-4.079-4.078l-6.117 6.117a.96.96 0 0 0-.263.491l-.679 3.4A.961.961 0 0 0 8.961 16Zm7.477-9.8a.958.958 0 0 1 .68-.281.961.961 0 0 1 .682 1.644l-.315.315-1.36-1.36.313-.318Zm-5.911 5.911 4.236-4.236 1.359 1.359-4.236 4.237-1.7.339.341-1.699Z" />
+                  </svg>
+                  <span class="flex-1 ms-3 whitespace-nowrap">Gerer les catégories</span>
                </a>
             </li>
          {% endif %}
