--- a/templates/admin/back-office.html.twig
+++ b/templates/admin/back-office.html.twig
@@ -60,7 +60,7 @@
                     </thead>
                     <tbody>
                         {% for user in users %}
-                        {% if user.id != session.id %}
+                        {# {% if user.id != session.id %} #}
                         <tr class="commune-item odd:bg-neutral-50 even:bg-gray-100">
                             <td class="px-3 py-1" data-id="{{ user.id }}" data-field="id">
                                 {{ user.id }}
@@ -108,7 +108,7 @@
                                 {% endif %}
                             </td>
                         </tr>
-                        {% endif %}
+                        {# {% endif %} #}
                         {% endfor %}
                     </tbody>
                 </table>
