--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -11,7 +11,7 @@
 </button>
 
 <aside id="separator-sidebar"
-   class=" z-40 w-64 mr-4 h-screen transition-transform -translate-x-full sm:translate-x-0 shadow-xl"
+   class=" z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0 shadow-xl"
    aria-label="Sidebar">
    <div class="flex flex-col justify-around h-full px-3 py-4 overflow-y-auto bg-neutral-50 dark:bg-neutral-50 font-light">
       <h1 class="mt-8 text-center">NOM APP</h1>
