--- a/templates/user/connexion.html.twig
+++ b/templates/user/connexion.html.twig
@@ -26,7 +26,7 @@
         {% endif %}
     </div>
 </div>
-<main class="w-full h-2/3 flex justify-center items-center">
+<main class="w-full flex justify-center items-center">
 
     <form action="controleur.php?page=user&action=login" method="post" class="p-8 border-solid border border-gray-200 bg-neutral-50 rounded-md py-8 shadow-lg">
         
