--- a/templates/categories/update.html.twig
+++ b/templates/categories/update.html.twig
@@ -23,7 +23,7 @@
                 {% if session.role_id == 1 %}
                 <p class="text-zinc-600 text-xs font-light">Admin</p>
                 {% else %}
-                <p>Gestionnaire</p>
+                <p class="text-zinc-600 text-xs font-light">Gestionnaire</p>
                 {% endif %}
             </div>
         </div>
